job: draft, ai verification
